// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deprecated component renders correctly 1`] = `
<DocumentFragment>
  <div>
    <p
      class="version"
    >
      <em>
        Deprecated since version 3.0.0:
      </em>
       This is a deprecated version.
    </p>
  </div>
</DocumentFragment>
`;

exports[`ends with a period when no endPunctuation is passed 1`] = `
<DocumentFragment>
  <div>
    <p
      class="version"
    >
      <em>
        New in version 4.0.0.
      </em>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders argument text inside the label, keeping its markup 1`] = `
<DocumentFragment>
  <div>
    <p
      class="version"
    >
      <em>
        New in version 7.2 (
        <em>
          Also available in 7.0.5
        </em>
        ):
      </em>
       This is a new version.
    </p>
  </div>
</DocumentFragment>
`;

exports[`versionadded component renders correctly 1`] = `
<DocumentFragment>
  <div>
    <p
      class="version"
    >
      <em>
        New in version 1.0.0:
      </em>
       This is a new version.
    </p>
  </div>
</DocumentFragment>
`;

exports[`versionchanged component renders correctly 1`] = `
<DocumentFragment>
  <div>
    <p
      class="version"
    >
      <em>
        Changed in version 2.0.0:
      </em>
       This is a changed version.
    </p>
  </div>
</DocumentFragment>
`;
